beginning work on settings view

--- a/src/main/resources/webapp/messages/messages.properties
+++ b/src/main/resources/webapp/messages/messages.properties
@@ -1,11 +1,8 @@
 #Module name
-ODK=ODK
+odk.settings=Settings
+odk.selectConfig=Select Configuration
+odk.addConfig=Add Configuration
+odk.save=Save
+odk.delete=Delete
+odk.verify=Verify
 
-#Buttons
-ODK.btn.sayHello=Say Hello
-
-#Infos
-ODK.info.instructions=Click to use Hello World service
-ODK.info.serviceResponse=Response from server
-ODK.info.noResponse=no response yet
-ODK.info.serviceCount=Number of responses
