--- a/src/main/resources/webapp/messages/messages.properties
+++ b/src/main/resources/webapp/messages/messages.properties
@@ -6,3 +6,13 @@ odk.save=Save
 odk.delete=Delete
 odk.verify=Verify
 
+odk.settings.section.accountSettings=Account Settings
+odk.settings.label.configName=Configuration Name
+odk.settings.label.configType=Configuration Type
+
+odk.settings.error.configName=error config name
+odk.settings.error.wrongConfigName=Wrong config name
+odk.settings.label.baseUrl=Base URL
+odk.settings.label.namespace=Namespace
+odk.settings.label.username=User Name
+odk.settings.label.password=Password
