--- a/src/main/resources/webapp/messages/messages.properties
+++ b/src/main/resources/webapp/messages/messages.properties
@@ -16,3 +16,9 @@ odk.settings.label.baseUrl=Base URL
 odk.settings.label.namespace=Namespace
 odk.settings.label.username=User Name
 odk.settings.label.password=Password
+
+odk.settings.save.success=Successfully saved configuration
+odk.settings.save.error=Error saving configuration
+odk.settings.delete.success=Successfully deleted configuration
+odk.settings.delete.error=Error deleting configuration
+odk.settings.get.error=Error retrieving configurations
