basic import forms view

--- a/src/main/resources/webapp/messages/messages.properties
+++ b/src/main/resources/webapp/messages/messages.properties
@@ -22,3 +22,6 @@ odk.settings.save.error=Error saving configuration
 odk.settings.delete.success=Successfully deleted configuration
 odk.settings.delete.error=Error deleting configuration
 odk.settings.get.error=Error retrieving configurations
+
+odk.import=Import
+odk.import.forms=Import Form Definitions
