Configuration no longer need namespace value

--- a/src/main/resources/webapp/messages/messages.properties
+++ b/src/main/resources/webapp/messages/messages.properties
@@ -17,11 +17,14 @@ odk.settings.label.namespace=Namespace
 odk.settings.label.username=User Name
 odk.settings.label.password=Password
 
-odk.settings.save.success=Successfully saved configuration
+odk.settings.save.success=Configuration Saved
 odk.settings.save.error=Error saving configuration
-odk.settings.delete.success=Successfully deleted configuration
+odk.settings.delete.success=Configuration deleted
 odk.settings.delete.error=Error deleting configuration
 odk.settings.get.error=Error retrieving configurations
 
 odk.import=Import
 odk.import.forms=Import Form Definitions
+odk.import.success=Form definitions imported
+odk.import.error=Error importing form definitions
+odkimport.importing=Importing form definitions...
