basic form import UI done

--- a/src/main/resources/webapp/messages/messages.properties
+++ b/src/main/resources/webapp/messages/messages.properties
@@ -12,7 +12,7 @@ odk.settings.label.configType=Configuration Type
 
 odk.settings.error.configName=error config name
 odk.settings.error.wrongConfigName=Wrong config name
-odk.settings.label.baseUrl=Base URL
+odk.settings.label.baseUrl=URL
 odk.settings.label.namespace=Namespace
 odk.settings.label.username=User Name
 odk.settings.label.password=Password
@@ -23,8 +23,9 @@ odk.settings.delete.success=Configuration deleted
 odk.settings.delete.error=Error deleting configuration
 odk.settings.get.error=Error retrieving configurations
 
-odk.import=Import
-odk.import.forms=Import Form Definitions
-odk.import.success=Form definitions imported
-odk.import.error=Error importing form definitions
-odkimport.importing=Importing form definitions...
+odk.forms=Forms
+odk.forms.import=Import
+odk.forms.import.importFormDefinitions=Import Form Definitions
+odk.forms.import.success=Form definitions imported
+odk.forms.import.error=Error importing form definitions
+odk.forms.import.importing=Importing form definitions...
