fixed messages.properties element

--- a/src/main/resources/webapp/messages/messages.properties
+++ b/src/main/resources/webapp/messages/messages.properties
@@ -14,7 +14,7 @@ odk.settings.label.hint.type=Configuration type required
 odk.settings.label.hint.name=Name required
 odk.settings.label.hint.url=Valid url required
 odk.settings.label.hint.username=username required
-odk.settings.label.hind.password=password required
+odk.settings.label.hint.password=password required
 
 odk.settings.error.configName=error config name
 odk.settings.error.wrongConfigName=Wrong config name
