added dynamically generated form forwarding URLs in the UI

--- a/src/main/resources/webapp/messages/messages.properties
+++ b/src/main/resources/webapp/messages/messages.properties
@@ -38,7 +38,12 @@ odk.forms.import.success=Form definitions imported
 odk.forms.import.error=Error importing form definitions
 odk.forms.import.importing=Importing form definitions...
 
+
 odk.formlist.forms=Forwarded Forms
 odk.formList.xform=X Form
 odk.formList.view=View
+odk.formsList.title=Title
+odk.formsList.forwardingUrl=Forwarding URL
+odk.formsList.details=Details
+odk.formsList.noSpaces=Form titles must not contain any spaces.
 
